[metadata]
# replace with your username:
name = elones
version = 0.0.1
author = Nestor Prieto
author_email = nez.prieto@gmail.com
description = An implementation of the ELO algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nestorp/claim-diff_elones
project_urls =
    Bug Tracker = https://github.com/nestorp/claim-diff_elones/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

